--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="app">
 	
 	付海文
-	    <img class="qrcode-img_28IRS" src="https://ss2.baidu.com/6ONYsjip0QIZ8tyhnq/it/u=2761266866,1242382534&amp;fm=179&amp;app=35&amp;f=PNG?w=120&amp;h=170&amp;s=1785D84E93E1895B4AFABBAF0300F008">
+	    <img class="qrcode-img_28IRS" src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fphotocdn.sohu.com%2F20080208%2FImg255101433.jpg&refer=http%3A%2F%2Fphotocdn.sohu.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1657118373&t=256f20012ccaf401ec15b15ffc4e531f">
 	    
 	    <img src=""> </img>
 	
