--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	付海文
 	    <img class="qrcode-img_28IRS" src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fphotocdn.sohu.com%2F20080208%2FImg255101433.jpg&refer=http%3A%2F%2Fphotocdn.sohu.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1657118373&t=256f20012ccaf401ec15b15ffc4e531f">
 	    
-	    <img src=""> </img>
+	   <video class="art-video" preload="auto" crossorigin="anonymous" autoplay="" src="blob:https://haokan.baidu.com/98147acb-e1c4-4eb5-87c3-3b9030621c7f"></video>
 	
 	</div>
     
