--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	付海文
 	    <img src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fphotocdn.sohu.com%2F20080208%2FImg255101433.jpg&refer=http%3A%2F%2Fphotocdn.sohu.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1657118373&t=256f20012ccaf401ec15b15ffc4e531f">
 	    
-	   <video preload="auto" crossorigin="anonymous" autoplay="" src="blob:https://haokan.baidu.com/98147acb-e1c4-4eb5-87c3-3b9030621c7f"></video>
+	 
+	    <video  preload="metadata" crossorigin="anonymous" autoplay="" src="https://vd3.bdstatic.com/mda-neraw18myz06014d/sc/cae_h264/1653553926335116433/mda-neraw18myz06014d.mp4?v_from_s=hkapp-haokan-nanjing&amp;auth_key=1654529415-0-0-2732f88e7d5c0841ddbf634fc1d17a3a&amp;bcevod_channel=searchbox_feed&amp;cd=0&amp;pd=1&amp;pt=3&amp;logid=0015777622&amp;vid=7634164770643197871&amp;abtest=101830_1-102599_1-17451_2-3000232_2&amp;klogid=0015777622"></video>
 	
 	</div>
     
